# poker-trainer

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-MIT  README.md
.claude/: settings.json
.claude/skills/run-app/: SKILL.md
.claude/skills/solution-library/: SKILL.md
.github/workflows/: pages.yml  rust.yml
crates/preflop-gen/: Cargo.toml
crates/preflop-gen/src/: equity.rs  export.rs  game.rs  icm.rs  main.rs  mccfr.rs
crates/solve-gen/: Cargo.toml
crates/solve-gen/src/: main.rs
data/preflop/: equity-hu-169.json  index.json
data/preflop/cash-hu13/: header.json  starter.jsonl
data/preflop/cash-hu144/: header.json  starter.jsonl
data/preflop/cash-hu21/: header.json  starter.jsonl
data/preflop/cash-hu3/: header.json  starter.jsonl
data/preflop/cash-hu34/: header.json  starter.jsonl
data/preflop/cash-hu5/: header.json  starter.jsonl
data/preflop/cash-hu55/: header.json  starter.jsonl
data/preflop/cash-hu8/: header.json  starter.jsonl
data/preflop/cash-hu89/: header.json  starter.jsonl
data/preflop/cash10/: header.json  starter.jsonl
data/preflop/cash100/: header.json  starter.jsonl
data/preflop/cash13/: header.json  starter.jsonl
data/preflop/cash144/: header.json
data/preflop/cash15/: header.json
data/preflop/cash150/: header.json
data/preflop/cash20/: header.json
data/preflop/cash21/: header.json
data/preflop/cash32/: header.json
data/preflop/cash34/: header.json
data/preflop/cash5/: header.json  starter.jsonl
data/preflop/cash50/: header.json
data/preflop/cash55/: header.json
data/preflop/cash75/: header.json
data/preflop/cash8/: header.json  starter.jsonl
data/preflop/cash89/: header.json
data/preflop/heads-up13/: header.json  starter.jsonl
data/preflop/heads-up21/: header.json  starter.jsonl
data/preflop/heads-up3/: header.json  starter.jsonl
data/preflop/heads-up34/: header.json  starter.jsonl
data/preflop/heads-up5/: header.json  starter.jsonl
data/preflop/heads-up55/: header.json  starter.jsonl
data/preflop/heads-up8/: header.json  starter.jsonl
data/preflop/heads-up89/: header.json  starter.jsonl
data/preflop/mtt-hu13/: header.json  starter.jsonl
data/preflop/mtt-hu21/: header.json  starter.jsonl
data/preflop/mtt-hu3/: header.json  starter.jsonl
data/preflop/mtt-hu34/: header.json  starter.jsonl
data/preflop/mtt-hu5/: header.json  starter.jsonl
data/preflop/mtt-hu55/: header.json  starter.jsonl
data/preflop/mtt-hu8/: header.json  starter.jsonl
data/preflop/mtt13/: header.json  starter.jsonl
data/preflop/mtt144/: header.json
data/preflop/mtt21/: header.json
data/preflop/mtt34/: header.json
data/preflop/mtt5/: header.json  starter.jsonl
data/preflop/mtt55/: header.json
data/preflop/mtt8/: header.json  starter.jsonl
data/preflop/mtt89/: header.json
data/preflop/poker-chase-10/: header.json  starter.jsonl
data/preflop/poker-chase-25/: header.json  starter.jsonl
data/preflop/poker-chase-40/: header.json  starter.jsonl
data/preflop/poker-chase-60/: header.json  starter.jsonl
data/ranges/3bp-bb-btn/: ip.txt  oop.txt
data/ranges/3bp-btn-co/: ip.txt  oop.txt
data/ranges/srp-btn-bb/: ip.txt  oop.txt
data/ranges/srp-co-bb/: ip.txt  oop.txt
data/ranges/srp-sb-bb/: ip.txt  oop.txt
data/solutions/: 6h5d4c-d728de43-ip.json  6h5d4c-d728de43-oop-33.json  6h5d4c-d728de43-oop-75.json  6h5d4c-ip.json  6h5d4c-oop-33.json  6h5d4c-oop-75.json  6h5d4c-oop.json  8h8c3d-d728de43-ip.json  8h8c3d-d728de43-oop-33.json  8h8c3d-d728de43-oop-75.json  8h8c3d-ip.json  8h8c3d-oop-33.json  8h8c3d-oop-75.json  8h8c3d-oop.json  9s8s4d-d728de43-ip.json  9s8s4d-d728de43-oop-33.json  9s8s4d-d728de43-oop-75.json  9s8s4d-ip.json  9s8s4d-oop-33.json  9s8s4d-oop-75.json  9s8s4d-oop.json  ah8h3h-d728de43-ip.json  ah8h3h-d728de43-oop-33.json  ah8h3h-d728de43-oop-75.json  ah8h3h-ip.json  ah8h3h-oop-33.json  ah8h3h-oop-75.json  ah8h3h-oop.json  as7d2c-d728de43-ip.json  as7d2c-d728de43-oop-33.json  as7d2c-d728de43-oop-75.json  as7d2c-ip.json  as7d2c-oop-33.json  as7d2c-oop-75.json  as7d2c-oop.json  kh7c2d-d728de43-ip.json  kh7c2d-d728de43-oop-33.json  kh7c2d-d728de43-oop-75.json  kh7c2d-ip.json  kh7c2d-oop-33.json  (+18 more)
data/tables-web/: README.md  index.json
data/tables-web/3bp-bb-btn/: 4s3s2d-289b7689.jsonl  5c5d9h-289b7689.jsonl  5h4h2s-289b7689.jsonl  6h5d4c-289b7689.jsonl  7c5s3d-289b7689.jsonl  8d7d3c-289b7689.jsonl  8h8c3d-289b7689.jsonl  9s8s4d-289b7689.jsonl  acjc9s-289b7689.jsonl  ah8h3h-289b7689.jsonl  ahad8c-289b7689.jsonl  ahqh7c-289b7689.jsonl  as7d2c-289b7689.jsonl  askd5h-289b7689.jsonl  jdtd4s-289b7689.jsonl  jh9h5c-289b7689.jsonl  kdkh6s-289b7689.jsonl  kh7c2d-289b7689.jsonl  khqs4d-289b7689.jsonl  (+6 more)
docs/: rake-ante-survey-2026.md  shared-machine-data-gen.md
docs/design/: 00-overview.md  01-tree-protocol.md  02-solution-library.md  03-study-mode.md  04-training-mode.md  05-analyze.md  06-solver-capabilities.md  07-preflop-solver.md  08-instant-flops.md  09-value-net.md
manifests/: all-1755.toml  lines-cash-hu55.toml  lines-cash89.toml  lines-mtt89.toml  starter-8.toml  texture-25.toml
manifests/preflop/: cash-hu13.toml  cash-hu144.toml  cash-hu21.toml  cash-hu3.toml  cash-hu34.toml  cash-hu5.toml  cash-hu55.toml  cash-hu8.toml  cash-hu89.toml  cash10.toml  cash100.toml  cash13.toml  cash144.toml  cash15.toml  cash150.toml  cash20.toml  cash21.toml  cash32.toml  cash34.toml  cash5.toml  cash50.toml  cash55.toml  cash75.toml  cash8.toml  cash89.toml  heads-up13.toml  heads-up21.toml  heads-up3.toml  heads-up34.toml  heads-up5.toml  heads-up55.toml  heads-up8.toml  heads-up89.toml  mtt-hu13.toml  mtt-hu21.toml  mtt-hu3.toml  mtt-hu34.toml  mtt-hu5.toml  mtt-hu55.toml  mtt-hu8.toml  (+12 more)
scripts/: collect-shards.sh  idle-run.sh  serve-web.sh
src/: analyze.rs  board.rs  eval.rs  ground.rs  iso.rs  lib.rs  main.rs  postflop_table.rs  preflop.rs  range.rs  report.rs  solution.rs  stats.rs  table.rs  texture.rs  trainer.rs  tree.rs
tests/fixtures/: ggpoker.txt  pokerstars.txt
web/: Cargo.toml  README.md  app.js  index.html  style.css
web/.cargo/: config.toml
web/src/: lib.rs
(+100 files in other folders)
