[package]
name = "poker-trainer"
version = "0.1.0"
edition = "2021"
description = "A post-flop-focused GTO poker trainer (CLI)"
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "4", features = ["derive"] }
rand = "0.10"                   # RNG for dealing; matches rs_poker's rand
rs_poker = "5"                  # card types + hand eval (crate name uses _, not -)

# --- Add these as you reach each phase ---
#
# Phase 3 (live solving, OPTIONAL — AGPL-3.0):
#   postflop-solver is git-only and AGPL. When you add it, put it in its own
#   crate (e.g. crates/trainer-solver) so the license boundary stays explicit
#   and it doesn't block publishing the rest. See README.
