[package]
name = "poker-trainer"
version = "0.1.0"
edition = "2021"
description = "A post-flop-focused GTO poker trainer (CLI)"
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "4", features = ["derive"] }
rand = "0.10"                   # RNG for dealing; matches rs_poker's rand
rs_poker = "5"                  # card types + hand eval (crate name uses _, not -)
serde = { version = "1", features = ["derive"] } # solution file format
serde_json = "1"               # human-inspectable solution files

# The AGPL solver lives in its own crate (crates/solve-gen) so it never links
# into this binary — the trainer only deserializes the JSON it produces.
[workspace]
members = ["crates/solve-gen"]
