[package]
name = "solve-gen"
version = "0.1.0"
edition = "2021"
description = "Offline GTO solution generator for poker-trainer"
# AGPL because it links postflop-solver. Kept in its own crate so the trainer
# binary (MIT OR Apache-2.0) never links the solver — it only reads the JSON
# this produces. Solver *output* is not a derivative work.
license = "AGPL-3.0-or-later"
publish = false

[dependencies]
# Pinned: the solver ships breaking changes without version bumps.
# The `bincode` feature enables the config-hash solve cache (design 01 M3);
# cache files are solver-native saves under ~/.cache — an AGPL-side detail
# the trainer never reads.
postflop-solver = { git = "https://github.com/b-inary/postflop-solver", rev = "9d1509fe5077d019825f833eed04b16d342dfda1", default-features = false, features = ["rayon", "bincode"] }
# Never called directly — pins the solver's `^2.0.0-rc.3` requirement, which
# cargo would otherwise resolve to bincode 2.0 stable (an rc.3 API break).
# Same story for the derive macro: rc.3's `^2.0.0-rc.3` slips to 2.0.1.
bincode = "=2.0.0-rc.3"
bincode_derive = "=2.0.0-rc.3"
poker-trainer = { path = "../.." }
clap = { version = "4", features = ["derive"] } # `gen` / `solve` subcommands
serde = { version = "1", features = ["derive"] } # manifest schema
serde_json = "1"
toml = "0.8" # manifests/<name>.toml
